# controller/admin_login.go
@@ -29,27 +29,29 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 // @Param body body dto.AdminLoginInput true "body"
 // @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
 // @Router /admin_login/login [post]
-func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
+func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
+
+	//1. params.UserName 取得管理员信息 admininfo
+	//2. admininfo.salt + params.Password sha256 => saltPassword
+	//3. saltPassword==admininfo.password
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
 		middleware.ResponseError(c, 2001, err)
 		return
 	}
-	// 1.查询user的数据
 	admin := &dao.Admin{}
-	// 2.根据前端传来的密码进行加密
-	// 3.检查是否相同
 	admin, err = admin.LoginCheck(tx, params)
 	if err != nil {
 		middleware.ResponseError(c, 2002, err)
 		return
 	}
 
+	//设置session
 	sessInfo := &dto.AdminSessionInfo{
 		ID:        admin.Id,
 		UserName:  admin.UserName,
@@ -58,12 +60,28 @@ func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	sessBts, err := json.Marshal(sessInfo)
 	if err != nil {
 		middleware.ResponseError(c, 2003, err)
+		return
 	}
-	// 设置session
 	sess := sessions.Default(c)
 	sess.Set(public.AdminSessionInfoKey, string(sessBts))
 	sess.Save()
 
-	out := &dto.AdminLoginOutput{Token: params.UserName}
+	out := &dto.AdminLoginOutput{Token: admin.UserName}
 	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLoginOut godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLoginOut(c *gin.Context) {
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(c, "")
 }
