# dao/service.go
@@ -1,0 +1,39 @@
+package dao
+
+import (
+	"gateway/dto"
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+	"time"
+)
+
+type ServiceInfo struct {
+	ID          int64     `json:"id" gorm:"primary_key"`
+	LoadType    int       `json:"load_type" gorm:"column:load_type" description:"负载类型 0=http 1=tcp 2=grpc"`
+	ServiceName string    `json:"service_name" gorm:"column:service_name" description:"服务名称"`
+	ServiceDesc string    `json:"service_desc" gorm:"column:service_desc" description:"服务描述"`
+	UpdatedAt   time.Time `json:"create_at" gorm:"column:create_at" description:"更新时间"`
+	CreatedAt   time.Time `json:"update_at" gorm:"column:update_at" description:"添加时间"`
+	IsDelete    int8      `json:"is_delete" gorm:"column:is_delete" description:"是否已删除；0：否；1：是"`
+}
+
+func (t *ServiceInfo) TableName() string {
+	return "gateway_service_info"
+}
+
+func (t *ServiceInfo) PageList(c *gin.Context, tx *gorm.DB, param *dto.ServiceListInput) ([]ServiceInfo, int64, error) {
+	total := int64(0)
+	list := []ServiceInfo{}
+	offset := (param.PageNo - 1) * param.PageSize
+
+	query := tx.Table(t.TableName()).Where("is_delete = 0")
+	if param.Info != "" {
+		query = query.Where("(service_name like ? or service_desc like ?)",
+			"%"+param.Info+"%", "%"+param.Info+"%")
+	}
+	if err := query.Limit(param.PageSize).Offset(offset).Order("id desc").Find(&list).Error; err != nil && err != gorm.ErrRecordNotFound {
+		return nil, 0, err
+	}
+	query.Limit(param.PageSize).Offset(offset).Count(&total)
+	return list, total, nil
+}
